[gd_scene load_steps=4 format=3 uid="uid://byy3f705vkxnh"]

[ext_resource type="Script" path="res://scene_scripts/totals_page.gd" id="1_l56c6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dio2d"]
bg_color = Color(0.168804, 0.671628, 0.738642, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kgntx"]
bg_color = Color(0.0182843, 0.270847, 0.46701, 1)

[node name="TotalsPage" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 355.0
offset_bottom = 476.0
script = ExtResource("1_l56c6")

[node name="MainBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1944.0
offset_bottom = 737.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dio2d")

[node name="BannerBackground" type="Panel" parent="MainBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1149.5
offset_top = -95.5
offset_right = 1149.5
offset_bottom = 394.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kgntx")

[node name="Title" type="Label" parent="MainBackground/BannerBackground"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -485.5
offset_top = -279.0
offset_right = 432.5
offset_bottom = -103.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 150
text = "Evaluation"
horizontal_alignment = 1

[node name="ReportSubjects" type="Label" parent="MainBackground/BannerBackground"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -893.5
offset_top = 99.0
offset_right = -115.5
offset_bottom = 190.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "Subjects in Report"

[node name="ReportSubjectsNumber" type="Label" parent="MainBackground/BannerBackground"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 386.5
offset_top = 99.0
offset_right = 562.5
offset_bottom = 190.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "8x"

[node name="ReportScore" type="Label" parent="MainBackground/BannerBackground"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -893.5
offset_top = 230.0
offset_right = 13.5
offset_bottom = 321.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "Subjects Total Score "

[node name="ReportScoreNumber" type="Label" parent="MainBackground/BannerBackground"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 386.5
offset_top = 229.0
offset_right = 732.5
offset_bottom = 320.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "12000pts"
